Updated manifest and Readme

--- a/package.json
+++ b/package.json
@@ -1,12 +1,1 @@
-{
-  "name": "com.gameframe.assetcache",
-  "displayName": "Gameframe.AssetCache",
-  "version": "1.0.1",
-  "description": "Asset cache library",
-  "keywords": [],
-  "author": {
-    "name": "Cory Leach",
-    "email": "cory.leach@gmail.com",
-    "url": "https://coryleach.info"
-  }
-}
+{"name":"com.gameframe.assetcache","displayName":"Gameframe.AssetCache","version":"1.0.1","description":"Library for caching and unloading assets","keywords":[],"author":{"name":"Cory Leach","email":"cory.leach@gmail.com","url":"https://coryleach.info","github":"coryleach","twitter":"coryleach","kofi":"https://ko-fi.com/coryleach"},"type":"library","repositoryName":"UnityAssetCache"}
